--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.27",
+    "mongodb": "^5.9.2",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
