--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.27",
+    "lucide-react": "^0.439.0",
     "mongodb": "^5.9.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
