--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.27",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.439.0",
     "mongodb": "^5.9.2",
     "next": "14.2.5",
