--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
